[project]
name = "maf-code-interpreter"
version = "0.1.0"
description = "Azure Container Apps Dynamic Sessions Python Code Interpreter for Microsoft Agent Framework"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Jay Lee" }
]
dependencies = [
    "agent-framework>=1.0.0rc1",
    "aiofiles>=24.1.0",
    "azure-ai-projects>=2.0.0b3",
    "azure-identity>=1.25.2",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[project.urls]
Homepage = "https://github.com/eggboy/maf-containerapps-codeinterpreter"
Repository = "https://github.com/eggboy/maf-containerapps-codeinterpreter"
Issues = "https://github.com/eggboy/maf-containerapps-codeinterpreter/issues"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.0",
]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "D",     # pydocstyle checks
    "F",     # Pyflakes
    "E", "W", # pycodestyle
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade (Essential)
    "S",     # flake8-bandit (Security)
    "BLE",   # blind-except (Safety)
    "LOG",   # flake8-logging (Production visibility)
    "C4",    # flake8-comprehensions
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "RUF",   # Ruff-specific rules
    "T20",   # flake8-print (Prevents stray prints in prod logs)
]

ignore = [
    "D100", # allow missing docstring in public module
    "D104", # allow missing docstring in public package
    "D105", # allow missing docstring in magic methods (__aenter__, __aexit__, etc.)
    "D418", # allow overload to have a docstring
    "TD003", # allow missing link to todo issue
    "FIX002", # allow todo
    "B027" # allow empty non-abstract method in ABC
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["D", "INP", "TD", "ERA001", "RUF", "S"]
"samples/**" = ["D", "INP", "ERA001", "RUF", "S", "T201"]
"examples/**" = ["D", "INP", "ERA001", "RUF", "S", "T201"]
"*.ipynb" = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/maf_code_interpreter"]